--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <title>Thought Spaghetti</title>
   <head>
   <body>
-    <p>Don't Look!</p>
+    <section>
+      <h1>MDN says that sections should have headers. Who am I to argue?</h1>
+      <p>Don't Look!</p>
+    </section>
+    <section>
+      <h1>MDN says that sections should have headers. Who am I to argue?</h1>
+      <p>Hey, another section!</p>
+    </section>
   </body>
 </html>
